# uma-auth-api

./: .fossa.yml  README.md  generate-all.sh  uma-auth-api.yml
.github/workflows/: lint.yaml  release-python-models.yaml
codegen-config/go/: config.yml
codegen-config/python-fastapi/: config.yml
codegen-config/python-fastapi-models/: config.yml
codegen-config/python-flask/: config.yml
codegen-config/typescript/: config.yaml
codegen/go/: Dockerfile  README.md  main.go
codegen/kotlin/: Dockerfile  README.md  build.gradle  settings.gradle
codegen/python-fastapi/: .openapi-generator-ignore  README.md  docker-compose.yaml  openapi.yaml
codegen/python-flask/: .openapi-generator-ignore  Pipfile  (+3 more)
codegen/python-models/: .openapi-generator-ignore  Pipfile  README.md  openapi.yaml  setup.cfg
codegen/python-models/.openapi-generator/: FILES
codegen/python-models/src/uma_auth/: openapi.yaml
codegen/python-models/src/uma_auth/models/: budget_estimate_response.py  currency.py  currency_preference.py  error_code.py  error_response.py  execute_quote_request.py  execute_quote_response.py  get_balance_response.py  get_info_response.py  invoice.py  list_transactions_response.py  locked_currency_side.py  lookup_user_response.py  make_invoice_request.py  pay_invoice_request.py  pay_invoice_response.py  pay_keysend_request.py  pay_keysend_request_tlv_records_inner.py  pay_keysend_response.py  pay_to_address_request.py  pay_to_address_request1.py  pay_to_address_response.py  quote.py  transaction.py  transaction_type.py
docs/: index.html
docs-markdown/: README.md
(+257 files in other folders)
