[metadata]
name = uma-auth-api
version = 0.0.5
description = This API allows you to authenticate with the UMA server to take actions on a user&#39;s wallet. It&#39;s the exposed communication layer between the NWC server and the main UMA server.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lightspark Group, Inc.
author_email = info@lightspark.com
keywords = OpenAPI UMA Auth API
python_requires = >= 3.7.*
license = Apache-2.0
license_files = LICENSE
project_urls =
  Documentation = https://docs.uma.me/
  Source Code = https://github.com/uma-universal-money-address/uma-auth-api/
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
include_package_data = True
setup_requires = setuptools
package_dir =
    = src
packages = find_namespace:

[options.package_data]
 "*" = *.yaml

[options.packages.find]
where = src
